# git-mob-rs

./: Cargo.toml  README.md  benchmark.sh
.github/workflows/: ci.yml
src/: exit_with_error.rs  file_actions.rs  lib.rs  main.rs
