[package]
name = "git_mob_rs"
version = "0.5.0"
authors = ["Jeremy Plsek <jeremyplsek@gmail.com>"]
edition = "2018"
description = "A CLI tool for social coding."
license = "MIT"
homepage = "https://github.com/jplsek/git-mob-rs"
repository = "https://github.com/jplsek/git-mob-rs"
readme = "README.md"
exclude = [
    "benchmark.sh"
]

[dependencies]
dirs = "5.0"
clap = { version = "4.5.8", features = ["derive"] }
gix = "0.63.0"
gix-config = "0.37.0"
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
