[package]
name = "git_mob_rs"
version = "0.5.1"
authors = ["Jeremy Plsek <jeremyplsek@gmail.com>"]
edition = "2018"
description = "A CLI tool for social coding."
license = "MIT"
homepage = "https://github.com/jplsek/git-mob-rs"
repository = "https://github.com/jplsek/git-mob-rs"
readme = "README.md"
exclude = ["benchmark.sh"]

[dependencies]
dirs = "5.0"
clap = { version = "4.5.20", features = ["derive"] }
gix = { version = "0.67.0", default-features = false }
gix-config = "0.41.0"
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
